# ncnn_paddleocr

./: README.md  angle-sim-op.param  local.properties
app/: build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/assets/: ch_PP-OCRv3_det.param  ch_PP-OCRv3_rec.param  det-sim-op.param  pdocrv2.0_det-op.param  pdocrv2.0_rec-op.param  rec-sim-op.param
app/src/main/java/com/tencent/paddleocrncnn/: MainActivity.java  PaddleOCRNcnn.java
app/src/main/jni/: CMakeLists.txt  clipper.cpp  common.cpp  common.h  paddleocr_ncnn.cpp
app/src/main/res/layout/: main.xml
app/src/main/res/values/: strings.xml
app/src/main/res/xml/: file_paths.xml
